fix: collapse height

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -4,12 +4,12 @@
 
 .collapse {
     @include dark-gradient;
-    padding: 10px 35px 25px 35px;
+    padding: 20px 35px 25px 35px;
     grid-column: span 4;
     flex-direction: column;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    max-height: 100px;
+    max-height: 80px;
     overflow: hidden;
     &.open {
         max-height: 260px;
@@ -22,7 +22,7 @@
         margin-bottom: 24px;
     }
     &__top {
-        @include flexbox;
+        display: flex;
         justify-content: space-between;
     }
     &__icon {
